syntax = "proto3";
package palomachain.paloma.evm;

import "gogoproto/gogo.proto";
import "google/api/annotations.proto";
import "cosmos/base/query/v1beta1/pagination.proto";
import "evm/params.proto";
import "evm/turnstone.proto";
// this line is used by starport scaffolding # 1

option go_package = "github.com/palomachain/paloma/x/evm/types";

// Query defines the gRPC querier service.
service Query {
  // Parameters queries the parameters of the module.
  rpc Params(QueryParamsRequest) returns (QueryParamsResponse) {
    option (google.api.http).get = "/palomachain/paloma/evm/params";
  }
  // Queries a list of GetValsetByID items.
	rpc GetValsetByID(QueryGetValsetByIDRequest) returns (QueryGetValsetByIDResponse) {
		option (google.api.http).get = "/palomachain/paloma/evm/get_valset_by_id/{valsetID}";
	}

// this line is used by starport scaffolding # 2
}

// QueryParamsRequest is request type for the Query/Params RPC method.
message QueryParamsRequest {}

// QueryParamsResponse is response type for the Query/Params RPC method.
message QueryParamsResponse {
  // params holds all the parameters of this module.
  Params params = 1 [(gogoproto.nullable) = false];
}

message QueryGetValsetByIDRequest {
  uint64 valsetID = 1;
  string chainReferenceID = 2;
}

message QueryGetValsetByIDResponse {
  Valset valset = 1;
}

// this line is used by starport scaffolding # 3
